--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -13,14 +13,18 @@ elementos aos quais estão anexados. Qualquer diretiva com um asterisco * é uma
     Aqui estou criando um título (que é o que está dentro do meu h3: {{ product.name }}) e o que está dentro do meu <a> é meu "detalhe, meu subtítulo, uma identificação"
      -->
     
-    <h3><a [title] = "product.name + ' detalhes'">
-        {{ product.name }}
+    <h3><a [title] = "product.nome + ' detalhes'">
+        {{ product.nome }}
     </a></h3>
 
     <!-- Usar uma diretiva para que Angular crie o elemento apenas se o produto atual tiver uma descrição.*ngIf<p> -->
-    <p *ngIf = "product.description">
-      Descrição: {{ product.description }}
+    <p *ngIf = "product.descricao">
+      Descrição: {{ product.descricao }}
     </p>
+
+    <h3 *ngIf = "product.preco">
+        R$ {{ product.preco }}
+    </h3>
 
     <!-- Criando o botão compartilhe, que quando clicado executará o método "share" que está na minha classe product-list.component.ts -->
     <button (click) = "share()">
