--- a/src/app/product-alerts/product-alerts.component.html
+++ b/src/app/product-alerts/product-alerts.component.html
@@ -1,4 +1,4 @@
 <!-- O que acontece aqui é que quando o produto for maior do que 700 aparecerá o botão de notificar-me, se aparece esse botão, quando clicá-lo eu quero que ele chame meu método notify -->
 <p *ngIf="product.preco > 700">
-    <button (click) = "notify.emit()">Notificar-me</button>
+    <button (click) = "notify.emit()">Notificar-me <i class="material-icons" id="notificacao">notifications_active</i></button>
 </p>
