--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -5,4 +5,6 @@
   <h3>{{ product.nome }}</h3>
   <h4>R$ {{ product.preco}},00</h4>
   <p>{{ product.descricao }}</p>
+
+<button (click)="addProdutoNoCarrinho(product)">Comprar<i class="material-icons" id="comprar">attach_money</i></button>
 </div>
