--- a/src/app/shipping/shipping.component.html
+++ b/src/app/shipping/shipping.component.html
@@ -1,6 +1,6 @@
 <h3>Preços das taxas de entrega</h3>
 
 <div class="shipping-item" *ngFor="let shipping of shippingCosts | async">
-  <span>{{ shipping.type }}</span>
-  <span>R$ {{ shipping.price }}</span>
+  <span>{{ shipping.tipo }}</span>
+  <span>R$ {{ shipping.preco }}</span>
 </div>
