--- a/src/app/shipping/shipping.component.html
+++ b/src/app/shipping/shipping.component.html
@@ -1,5 +1,6 @@
 <h3>Preços das taxas de entrega</h3>
 
+<!-- Diretira para ir andando pelos shippings -->
 <div class="shipping-item" *ngFor="let shipping of shippingCosts | async">
   <span>{{ shipping.tipo }}</span>
   <span>R$ {{ shipping.preco }}</span>
